testing mobile section stretch bug fix

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -13,7 +13,7 @@
 #hero {
     display: flex;
     max-width: 100%;
-    height: 87dvh;
+    height: 87vh;
     margin-bottom: 0;
     overflow: hidden;
 }
@@ -64,7 +64,7 @@
 }
 
 .goal-section-img-container {
-    height: 100dvh;
+    height: 100vh;
     width: 55%;
     /* min-width: 40vw; */
 }
@@ -106,7 +106,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100dvh;
+    height: 100vh;
     width: 100%;
     background-color: black;
 }
